chore: Change README and include gcloudignore

--- a/helloworld/Makefile
+++ b/helloworld/Makefile
@@ -8,5 +8,16 @@ test:
 
 .PHONY: requirements
 requirements:
-	# @poetry export --without-hashes --format=requirements.txt > requirements.txt
 	@poetry export --without-hashes --format=requirements.txt > requirements.txt
+
+.PHONY: deploy
+deploy: requirements
+	@gcloud functions deploy hello_http --runtime python310 --trigger-http --allow-unauthenticated
+
+.PHONY: undeploy
+undeploy:
+	@gcloud functions delete hello_http
+
+.PHONY: prod-logs
+prod-logs:
+	@gcloud functions logs read hello_http
